# ShotUp

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  appveyor.yml  shotup.example.ini  snapcraft.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml  question.md
.github/workflows/: Linux-arm-pack.yml  Linux-pack.yml  MacOS-pack.yml  Windows-pack.yml  deploy-dev-docs.yml
data/: graphics.qrc  shotup.rc
data/appdata/: org.shotup.Shotup.metainfo.xml
data/dbus/: org.shotup.Shotup.service.in  org.shotup.Shotup.xml
data/desktopEntry/package/: org.shotup.Shotup.desktop
data/man/man1/: shotup.1
data/shell-completion/: shotup.bash  shotup.fish  shotup.zsh
data/snap/: snapcraft.yaml
data/translations/: Internationalization_ar.ts  Internationalization_bg.ts  Internationalization_ca.ts  Internationalization_cs.ts  Internationalization_da.ts  Internationalization_de_DE.ts  Internationalization_el.ts  Internationalization_en.ts  Internationalization_es.ts  Internationalization_et.ts  Internationalization_eu.ts  Internationalization_fa.ts  Internationalization_fi.ts  Internationalization_fr.ts  Internationalization_ga.ts  Internationalization_gl.ts  Internationalization_grc.ts  Internationalization_he.ts  Internationalization_hu.ts  Internationalization_id.ts  Internationalization_it_IT.ts  Internationalization_ja.ts  Internationalization_ka.ts  Internationalization_ko.ts  Internationalization_nb_NO.ts  Internationalization_nl.ts  Internationalization_nl_NL.ts  Internationalization_pl.ts  Internationalization_pt.ts  Internationalization_pt_BR.ts  Internationalization_ro.ts  Internationalization_ru.ts  Internationalization_sk.ts  Internationalization_sr_SP.ts  Internationalization_sv_SE.ts  Internationalization_sw.ts  Internationalization_ta.ts  Internationalization_th.ts  Internationalization_tr.ts  Internationalization_uk.ts  (+4 more)
docs/: CONTRIBUTING.md  RFC.md  ReleaseNote_12.1.md  ReleaseNotes_0.9.md  ReleaseNotes_11.0.md  ReleaseNotes_12.0.md  Releasing.md  Sway and wlroots support.md
docs/RFC/: 0000-Add-Opacity-slider.md
docs/dev/: mkdocs.yml  post-process.sh
docs/dev/src/: debugging.md  docs.md  faq.md  index.md
docs/shortcuts-config/: shotup-shortcuts-kde.khotkeys
packaging/debian/: changelog  control  copyright  rules
packaging/flatpak/: org.shotup.Shotup.yml
packaging/macos/: Info.plist.in  create_dmg.sh
packaging/rpm/fedora/: shotup.spec
packaging/rpm/opensuse/: shotup.spec
src/: CMakeLists.txt  main.cpp  windows-cli.cpp
src/cli/: CMakeLists.txt  commandlineparser.cpp
src/config/: CMakeLists.txt  cacheutils.h  configresolver.cpp  generalconf.cpp  setshortcutwidget.cpp  styleoverride.h  visualseditor.cpp
src/core/: CMakeLists.txt  globalshortcutfilter.cpp  qguiappcurrentscreen.h  shotup.cpp  shotup.h  shotupdaemon.cpp  shotupdaemon.h  shotupdbusadapter.cpp  shotupdbusadapter.h  signaldaemon.cpp
src/tools/: CMakeLists.txt  capturecontext.cpp  capturetool.h
src/tools/imgupload/: imguploadermanager.h
src/tools/imgupload/storages/: imguploaderbase.cpp
src/tools/pin/: pinwidget.cpp
src/tools/sizedecrease/: sizedecreasetool.cpp  sizedecreasetool.h
src/tools/sizeincrease/: sizeincreasetool.cpp  sizeincreasetool.h
src/utils/: CMakeLists.txt  abstractlogger.cpp  confighandler.cpp  confighandler.h  globalvalues.cpp  history.cpp  pathinfo.cpp  screengrabber.cpp  screenshotsaver.cpp  systemnotification.cpp  valuehandler.cpp
src/widgets/: CMakeLists.txt  capturelauncher.cpp  infowindow.cpp  infowindow.ui  trayicon.cpp  updatenotificationwidget.cpp  updatenotificationwidget.h  uploadhistory.ui  uploadlineitem.cpp
src/widgets/capture/: CMakeLists.txt  capturetoolobjects.h  capturewidget.cpp  modificationcommand.h
src/widgets/panel/: CMakeLists.txt
tests/: action_options.sh  path_option.sh
